metadata/force-app/main/default/objects/CustomName_fvNSQ__c/CustomName_fvNSQ__c.object-meta.xml
<CustomObject>
    <description>Description_izYXt</description>
    <label>CustomLabel_kBbGZ</label>
    <nameField>
        <label>CustomLabel_kBbGZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_kBbGZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>