metadata/force-app/main/default/objects/CustomName_fvNSQ__c/fields/CustomField_DWmwM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DWmwM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvQBmc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>