metadata/force-app/main/default/objects/CustomName_fvNSQ__c/fields/CustomField_YaTNN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YaTNN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrdYhI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>